--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "ts-node-dev": "^2.0.0"
   }
 }
