--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
@@ -30,6 +31,7 @@
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.24.2"
   }
